Eval Test Suite (#3)
* Add autograding to Meta prj

* Give this a try

* Update Meta asgn

* ugh

* forgot the desugar/sugar one

* Update tests1-4 in asgn dir

* Correct typo (see Iowa-CS-3820-Fall-2021/project-meta-kian_w#1)

* Add tests to asgn

--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -37,4 +37,5 @@ jobs:
       run: |
         sudo chmod +x bin/metachk
         sudo chmod +x test.sh
+        sudo chmod +x testEval.sh
     - uses: education/autograding@v1
