Add Library Test Suite (#7)
* Actually fix Meta bin

* Prepare lib tests for distr

* Make sh scripts executable

* Add Logic and Meta distr

* Actually add to the right dir

--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -38,4 +38,5 @@ jobs:
         sudo chmod +x bin/metachk
         sudo chmod +x test.sh
         sudo chmod +x testEval.sh
+        sudo chmod +x testLib.sh
     - uses: education/autograding@v1
